# LC-test-5

./: CMakeLists.txt  Makefile  README.md
large-numbers/: LargeNumbers.cpp  LargeNumbers.hpp  large-numbers.cpp  large-numbers.hpp  main.cpp
simulated-sensors/: SimulatedSensors.cpp  SimulatedSensors.hpp  main.cpp
unit-test/: CMakeLists.txt
unit-test/source/: test_large_numbers.cpp
